# tasque2.0

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_core.py  0002_schedules.py  0003_provider_runs.py  0004_workflows.py  0005_projects.py  0006_memories.py  0007_discord.py  0008_schedule_targets.py  0009_agent_results.py  0010_drop_work_item_timeout.py  0011_remove_projects.py  0012_memory_embeddings.py
data/work-templates/workout/: context.json  (+2 more)
extensions/: README.md
src/tasque2/: __init__.py  android.py  artifacts.py  compression.py  config.py  daemon.py  db.py  discord_adapter.py  discord_bot.py  discord_output.py  discord_ui.py  embeddings.py  extensions.py  health.py  imaging.py  localtime.py  memory.py  memory_ingest.py  memory_vault.py  migrations.py  models.py  ops.py  photoshop.py  providers.py  queue.py  repo.py  reports.py  result_inbox.py  retrieval.py  runbooks.py  runtime.py  scheduler.py  status.py  templates.py  weather.py  worker_context.py  workflows.py
tests/: conftest.py  test_android.py  test_core_storage.py  test_daemon_concurrency.py  test_daemon_status.py  test_discord_adapter.py  test_discord_bot.py  test_discord_output.py  test_discord_ui.py  test_embeddings.py  test_fidelity_workflows.py  test_health.py  test_imaging.py  test_mcp_tools.py  test_memory.py  test_memory_hybrid.py  test_migrations.py  test_ops_reports.py  test_photoshop.py  test_providers.py  test_runbooks.py  test_scheduler.py  test_work_queue.py  test_worker_context.py  test_workflows.py
(+7 files in other folders)
